--- a/comicteca/templates/comics/base.html
+++ b/comicteca/templates/comics/base.html
@@ -94,23 +94,15 @@
 
     <div class="container-fluid">
       <div class="row">
-	<!-- left sidebar block -->
+	      <!-- left sidebar block -->
         <div class="col-sm-3 col-md-2 sidebar">
           {% block side_block %}
           {% endblock %}
         </div>
-	<!-- body block -->
+
+	      <!-- body block -->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          {% if messages %}
-            <ul class="messages">
-            {% for message in messages %}
-              <li class="{{ message.tags }}">
-                {{ message|safe }}
-                <a href="#" class="close">✖</a>
-              </li>
-            {% endfor %}
-            </ul>
-          {% endif %}
+          {% include 'comics/partials/messages.html' %}
           <div>
             {% block body_block %}
             {% endblock %}
