--- a/comicteca/templates/comics/base.html
+++ b/comicteca/templates/comics/base.html
@@ -42,10 +42,10 @@
               {% endif %}
             </p>
           </ul>
+
           <!-- right side of navbar -->
           <ul class="nav navbar-nav navbar-right">
             {% if request.user.is_authenticated %}
-
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">
                   {% if request.user.profile.photo %}
@@ -88,6 +88,11 @@
 
             {% endif %} <!-- end if authenticated -->
           </ul>
+
+          <form class="navbar-form navbar-right" action="{% url 'comicteca_search_list_view' %}" method="get" accept-charset="utf-8">
+            <input class="searchfield" id="searchbox" name="q" type="text" placeholder="Search">
+          </form>
+
         </div>
       </div>
     </div>
