--- a/comicteca/templates/comics/base.html
+++ b/comicteca/templates/comics/base.html
@@ -10,8 +10,8 @@
 
     <title>{% block title %}Comicteca{% endblock %}</title>
 
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet" -->
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap-3.3.7-dist/css/bootstrap.min.css' %}" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -19,7 +19,6 @@
     <![endif]-->
   </head>
 
-  {% load staticfiles %}
 
   <body>
 
