Set sidebar background color to a lighter value

--- a/comicteca/comics/static/css/base_dashboard.css
+++ b/comicteca/comics/static/css/base_dashboard.css
@@ -35,7 +35,7 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #b16868;
+    background-color: #dadada;
     border-right: 1px solid #eee;
   }
 }
